--- a/notebooks/PDF Q&A Chatbot Using RAG.ipynb
+++ b/notebooks/PDF Q&A Chatbot Using RAG.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "\n",
     "<div style=\"text-align:left\">\n",
-    "    <img src=\"../assets/images/Project_Pipeline.png\" width=\"100%\"/>\n",
+    "    <img src=\"/assets/images/Project_Pipeline.png\" width=\"100%\"/>\n",
     "</div>\n",
     "\n",
     "\n",
